FIX: Moved up z-index of drop down and adjusted opacity

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -72,13 +72,14 @@
 
 @media (max-width: 992px) {
   .navbar-nav {
-    background: #ffffff7a;
+    background: #ffffffe6;
     width: 30%;
     max-width: 200px;
     border-radius: 2px;
     position: absolute;
     left: 4%;
     top: 100%;
+    z-index: 2;
   }
 
   .navbar-collapse {
